--- a/assets/scss/assets/_cards.scss
+++ b/assets/scss/assets/_cards.scss
@@ -1,4 +1,5 @@
-.team-block.list-b-none .post {
+.case-section.team-block.list-b-none .post,
+.show-section.team-block.list-b-none .post {
 
 
     @media only screen and (max-width: 768px) {
@@ -32,4 +33,27 @@
     .item:nth-child(-n+3) {
         display: block;
     }
+}
+
+.team-section .team-block.list-b-none .post {
+
+
+    @media only screen and (max-width: 768px) {
+        &:nth-of-type(n+4) {
+            display: none !important;
+        }
+    }
+
+    @media only screen and (max-width: 1200px) {
+        &:nth-of-type(n+5) {
+            display: none !important;
+        }
+    }
+
+    @media only screen and (min-width: 1200px) {
+        &:nth-of-type(n+100) {
+            display: none !important;
+        }
+    }
+
 }
