--- a/assets/scss/assets/_algemeen.scss
+++ b/assets/scss/assets/_algemeen.scss
@@ -11,6 +11,41 @@ main {
   padding-top: 115px;
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  main {
+    padding-top: 115px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  main {
+    padding-top: 115px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 765px) {
+  main {
+    padding-top: 80px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  main {
+    padding-top: 80px;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  main {
+    padding-top: 80px;
+  }
+}
+
 .woocommerce img,
 .woocommerce-page img {
   height: 100% !important;
