--- a/assets/scss/assets/_form.scss
+++ b/assets/scss/assets/_form.scss
@@ -70,3 +70,59 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield !important;
 }
+
+
+.formulier {
+    .gfield_label {
+        display: none !important;
+    }
+
+    input,
+    textarea {
+        min-height: 46px !important;
+        padding-left: 20px !important;
+        font-size: 16px !important;
+        font-family: Karlsen, sans-serif !important;
+        font-weight: 400 !important;
+        color: #2B282880 !important;
+    }
+
+    .button {
+        width: 240px !important;
+        background: #000 !important;
+        z-index: 1 !important;
+        font-family: Tanker, sans-serif !important;
+        font-size: 25px !important;
+        line-height: 25px !important;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
+        border-radius: 0px !important;
+        font-weight: 400 !important;
+        color: #fff !important;
+        margin-left: auto !important;
+        margin-right: auto !important;
+        height: 58px !important;
+        margin-top: 15px !important;
+        cursor: pointer !important;
+    }
+
+    .gform_validation_errors {
+        display: none !important;
+    }
+
+    .gform_wrapper.gravity-theme .gform_footer,
+    .gform_wrapper.gravity-theme .gform_page_footer {
+        margin: 0px 0 0 !important;
+        padding: 0px 0 !important;
+    }
+
+    .gform_wrapper.gravity-theme .gform_footer button,
+    .gform_wrapper.gravity-theme .gform_footer input,
+    .gform_wrapper.gravity-theme .gform_page_footer button,
+    .gform_wrapper.gravity-theme .gform_page_footer input {
+        margin-bottom: 0px !important;
+    }
+}
