--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -651,6 +651,21 @@ video {
 .top-\[unset\] {
   top: unset;
 }
+.bottom-\[-5px\] {
+  bottom: -5px;
+}
+.bottom-\[300px\] {
+  bottom: 300px;
+}
+.bottom-\[324px\] {
+  bottom: 324px;
+}
+.bottom-\[400px\] {
+  bottom: 400px;
+}
+.bottom-\[200px\] {
+  bottom: 200px;
+}
 .-z-10 {
   z-index: -10;
 }
@@ -827,6 +842,24 @@ video {
 .mt-\[50px\] {
   margin-top: 50px;
 }
+.mb-\[2px\] {
+  margin-bottom: 2px;
+}
+.mt-1 {
+  margin-top: 10px;
+}
+.mt-\[8px\] {
+  margin-top: 8px;
+}
+.mb-\[18px\] {
+  margin-bottom: 18px;
+}
+.mt-\[300px\] {
+  margin-top: 300px;
+}
+.mt-\[324px\] {
+  margin-top: 324px;
+}
 .line-clamp-1 {
   overflow: hidden;
   display: -webkit-box;
@@ -886,6 +919,12 @@ video {
 }
 .aspect-video {
   aspect-ratio: 16 / 9;
+}
+.aspect-\[16\/6\] {
+  aspect-ratio: 16/6;
+}
+.aspect-\[16\/7\] {
+  aspect-ratio: 16/7;
 }
 .h-2 {
   height: 20px;
@@ -1010,6 +1049,15 @@ video {
 }
 .h-full {
   height: 100%;
+}
+.h-\[38px\] {
+  height: 38px;
+}
+.h-\[1px\] {
+  height: 1px;
+}
+.h-\[17\.67px\] {
+  height: 17.67px;
 }
 .max-h-\[314px\] {
   max-height: 314px;
@@ -1845,6 +1893,12 @@ video {
 .pt-\[80px\] {
   padding-top: 80px;
 }
+.pb-\[2px\] {
+  padding-bottom: 2px;
+}
+.pt-\[91px\] {
+  padding-top: 91px;
+}
 .text-left {
   text-align: left;
 }
@@ -2072,6 +2126,10 @@ video {
     top: 150px;
   }
 
+  .md\:bottom-0 {
+    bottom: 0;
+  }
+
   .md\:order-1 {
     order: 1;
   }
@@ -2079,6 +2137,16 @@ video {
   .md\:mx-\[unset\] {
     margin-left: unset;
     margin-right: unset;
+  }
+
+  .md\:my-\[8px\] {
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+
+  .md\:my-\[13px\] {
+    margin-top: 13px;
+    margin-bottom: 13px;
   }
 
   .md\:mb-\[30px\] {
@@ -2115,6 +2183,18 @@ video {
 
   .md\:mt-\[unset\] {
     margin-top: unset;
+  }
+
+  .md\:mb-\[0px\] {
+    margin-bottom: 0px;
+  }
+
+  .md\:mt-\[8px\] {
+    margin-top: 8px;
+  }
+
+  .md\:mb-\[18px\] {
+    margin-bottom: 18px;
   }
 
   .md\:line-clamp-1 {
@@ -2213,6 +2293,18 @@ video {
 
   .md\:h-auto {
     height: auto;
+  }
+
+  .md\:h-\[45px\] {
+    height: 45px;
+  }
+
+  .md\:h-\[37\.67px\] {
+    height: 37.67px;
+  }
+
+  .md\:h-\[17\.67px\] {
+    height: 17.67px;
   }
 
   .md\:max-h-\[371px\] {
@@ -2623,6 +2715,10 @@ video {
     margin-top: unset;
   }
 
+  .lg\:mb-\[30px\] {
+    margin-bottom: 30px;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -2695,6 +2791,26 @@ video {
     height: calc(100dvh - 33px);
   }
 
+  .lg\:h-\[36\.5vw\] {
+    height: 36.5vw;
+  }
+
+  .lg\:h-\[40vw\] {
+    height: 40vw;
+  }
+
+  .lg\:h-\[45vw\] {
+    height: 45vw;
+  }
+
+  .lg\:h-\[48vw\] {
+    height: 48vw;
+  }
+
+  .lg\:h-\[47\.5vw\] {
+    height: 47.5vw;
+  }
+
   .lg\:max-h-\[294px\] {
     max-height: 294px;
   }
@@ -2705,6 +2821,22 @@ video {
 
   .lg\:max-h-\[calc\(50vw-60px\)\] {
     max-height: calc(50vw - 60px);
+  }
+
+  .lg\:max-h-\[calc\(45vw-60px\)\] {
+    max-height: calc(45vw - 60px);
+  }
+
+  .lg\:max-h-\[45vh\] {
+    max-height: 45vh;
+  }
+
+  .lg\:max-h-\[47\.5vh\] {
+    max-height: 47.5vh;
+  }
+
+  .lg\:max-h-\[47\.5vw\] {
+    max-height: 47.5vw;
   }
 
   .lg\:min-h-\[unset\] {
@@ -2910,6 +3042,10 @@ video {
     margin-left: calc(30px * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .lg\:overflow-hidden {
+    overflow: hidden;
+  }
+
   .lg\:overflow-y-auto {
     overflow-y: auto;
   }
@@ -2966,6 +3102,14 @@ video {
 
   .lg\:pt-\[unset\] {
     padding-top: unset;
+  }
+
+  .lg\:pt-\[90\.67px\] {
+    padding-top: 90.67px;
+  }
+
+  .lg\:pt-\[115px\] {
+    padding-top: 115px;
   }
 
   .lg\:text-left {
@@ -3058,6 +3202,10 @@ video {
 
   .lg\:leading-\[32px\] {
     line-height: 32px;
+  }
+
+  .lg\:hover\:bg-\[\#78B893\]\/60:hover {
+    background-color: rgb(120 184 147 / 0.6);
   }
 }
 @media (min-width: 1352px) {
